Removed dots from sentences

--- a/code/dev/parts/shared/permissions/permissions.html
+++ b/code/dev/parts/shared/permissions/permissions.html
@@ -115,7 +115,7 @@
             </div>
             <span class="{{model.permissions.mobile_analytics.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                 ng-show="apps && apps.length === 0 && model.permissions.mobile_analytics.access">
-                No mobile apps found for this account.
+                No mobile apps found for this account
             </span>
         </div>
         <div class="checkbox-list">
@@ -149,7 +149,7 @@
             </div>
             <span class="{{model.permissions.domains.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                 ng-show="domains && domains.length === 0 && model.permissions.domains.access">
-                No domains found for this account.
+                No domains found for this account
             </span>
         </div>
         <div class="checkbox-list">
@@ -184,7 +184,7 @@
             </div>
             <span class="{{model.permissions.cache_purge.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                 ng-show="domains && domains.length === 0 && model.permissions.cache_purge.access">
-                No domains found for this account.
+                No domains found for this account
             </span>
         </div>
         <div class="checkbox-list">
@@ -219,7 +219,7 @@
             </div>
             <span class="{{model.permissions.web_analytics.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                 ng-show="domains && domains.length === 0 && model.permissions.web_analytics.access">
-                No domains found for this account.
+                No domains found for this account
             </span>
         </div>
         <div class="checkbox-list" style="margin-top: 15px;">
@@ -254,7 +254,7 @@
             </div>
             <span class="{{model.permissions.security_analytics.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                 ng-show="domains && domains.length === 0 && model.permissions.security_analytics.access">
-                No domains found for this account.
+                No domains found for this account
             </span>
         </div>
         <div class="checkbox-list" style="margin-top: 15px;">
@@ -289,7 +289,7 @@
             </div>
             <span class="{{model.permissions.dns_zones.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                 ng-show="dnsZones && dnsZones.length === 0 && model.permissions.dns_zones.access">
-                No DNS Zones found for this account.
+                No DNS Zones found for this account
             </span>
         </div>
         <div class="checkbox-list" style="margin-top: 15px;">
@@ -324,7 +324,7 @@
                 </div>
                 <span class="{{model.permissions.dns_analytics.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
                     ng-show="dnsZones && dnsZones.length === 0 && model.permissions.dns_analytics.access">
-                    No DNS Zones found for this account.
+                    No DNS Zones found for this account
                 </span>
             </div>
         <div class="checkbox-list" ng-if="auth.isReseller() || auth.isRevadmin()" style="margin-top: 15px;">
