Small polishing for tooltip texts

--- a/code/dev/parts/dns_zone_records/edit.html
+++ b/code/dev/parts/dns_zone_records/edit.html
@@ -63,7 +63,7 @@
             <label for="recordTtl" class="control-label col-sm-2">TTL </label>
             <div class="col-sm-10" ng-class="{'has-error': editForm.recordTtl.$invalid && editForm.recordTtl.$dirty}">
               <input name="recordTtl" type="number" ng-min="0" ng-max="2147483647" class="form-control inline-block" placeholder="20" ng-model="record.ttl"> (seconds)
-              <label for="recordTtl" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional; if not set, the default TTL for the {{zone}} zone will be used.">
+              <label for="recordTtl" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional; if not set, the default TTL for the {{zone}} zone will be used">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="editForm.recordTtl.$error" role="alert" ng-messages-multiple>
@@ -85,7 +85,7 @@
             <label for class="control-label col-sm-2">Link Target</label>
             <div class="col-sm-10">
               <input type="text" class="form-control inline-block" placeholder="target.example.com" ng-model="record.link">
-              <label for class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The FQDN of the record (in NS1 platform) holding the configuration this link should use.">
+              <label for class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The FQDN of the record (in NS1 platform) holding the configuration this link should use">
                 <i class="fa fa-question-circle"></i>
               </label>
             </div>
