--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -206,7 +206,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="companyName" name="companyName" placeholder="Company Name" ng-maxlength="150"
                   ng-model="$ctrl.model.company_name" ng-disabled="$ctrl._loading">
-                <label for="companyName" class="text-info" popover-trigger="mouseenter" uib-popover="Will be generated from your first and last name if left empty.">
+                <label for="companyName" class="text-info" popover-trigger="mouseenter" uib-popover="Will be generated from your first and last name if left empty">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['companyName'].$error.maxlength" style="color:red">150 characters max</div>
@@ -219,7 +219,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" required id="address1" name="address1" placeholder="Address" ng-model="$ctrl.model.address1"
                   ng-maxlength="150" ng-disabled="$ctrl._loading">
-                <label for="address1" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later.">
+                <label for="address1" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['address1'].$error.maxlength" style="color:red">150 characters max</div>
@@ -231,7 +231,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="address2" name="address2" placeholder="Address (Line 2)" ng-model="$ctrl.model.address2"
                   ng-maxlength="150" ng-disabled="$ctrl._loading">
-                <label for="address2" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later.">
+                <label for="address2" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['address2'].$error.maxlength" style="color:red">150 characters max</div>
@@ -244,7 +244,7 @@
                 <select type="text" name="country" class="form-control inline-block" id="country" placeholder="Country" required ng-model="$ctrl.model.country"
                   ng-options="key as value for (key , value) in  $ctrl.countries" ng-disabled="$ctrl._loading">
           </select>
-                <label for="country" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="country" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
               </div>
@@ -255,7 +255,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="state" name="state" required placeholder="State" ng-model="$ctrl.model.state"
                   ng-maxlength="150" ng-disabled="$ctrl._loading">
-                <label for="state" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="state" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['state'].$error.maxlength" style="color:red">150 characters max</div>
@@ -267,7 +267,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="City" name="city" required placeholder="City" ng-model="$ctrl.model.city"
                   ng-maxlength="150" ng-disabled="$ctrl._loading">
-                <label for="city" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="city" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['city'].$error.maxlength" style="color:red">150 characters max</div>
@@ -279,7 +279,7 @@
               <div class="col-sm-9">
                 <input type="text" ng-pattern="zipRegex" class="form-control inline-block" id="zipcode" name="zipcode" ng-maxlength="30"
                   required placeholder="Zip Code" ng-model="$ctrl.model.zipcode" ng-maxlength="30" ng-disabled="$ctrl._loading">
-                <label for="zipcode" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="zipcode" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['zipcode'].$error.maxlength" style="color:red">30 characters max</div>
